--- a/vue-front-1010/package.json
+++ b/vue-front-1010/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/compat-data": "^7.12.5",
+    "axios": "^0.21.0",
     "nuxt": "^2.0.0",
     "vue-awesome-swiper": "^3.1.3"
   },
